--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tanstack/react-query": "^5.66.9",
     "@tanstack/react-table": "^8.21.2",
     "@types/jsonwebtoken": "^9.0.8",
+    "@types/qrcode": "^1.5.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
@@ -31,6 +32,7 @@
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "prettier": "^3.5.2",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
