--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@types/qrcode": "^1.5.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
+    "cmdk": "^1.1.1",
     "command": "^1.1.1",
     "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -43,6 +43,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "recharts": "^2.15.1",
     "separator": "^0.1.0",
     "sharp": "^0.33.5",
     "skeleton": "^0.1.2",
